--- a/app/views/discusses/main_form.html.erb
+++ b/app/views/discusses/main_form.html.erb
@@ -68,11 +68,11 @@
 		var data={
 			isPreview:true,
 			is_anonymous:$("#discuss_is_anonymous").prop("checked"),
-			uid:<%=current_user.try(:uid)||0%>,
+      hasSocial: <%=current_user.hasSocialAuth? %>,
 			ct_name:$("#ct-id").text(),
-			hasFb:<%=current_user.hasFb?%>,
 			user_name:$("#discuss_is_anonymous").prop("checked") ? "匿名" : "<%=current_user.name%>",
-			imgsrc:"<%=@imgsrc %>",
+			imgsrc:"<%=current_user.avatar_url %>",
+      webpage:"<%=current_user.social_webpage_url%>",
 			title:$("#discuss_title").val(),
 			content:$("#discuss_content").val(),
 			id:0,
