--- a/app/views/main/test.html.erb
+++ b/app/views/main/test.html.erb
@@ -1,19 +1,9 @@
 <h3>TEST</h3>
 
-<script>
-
-/*
- * Sample for get all courses of a user
- * Required: Logined
- */
-	
-	$(document).ready(function(){
-	
-		$.getJSON("/user/get_courses?type=list", function(data){
-			console.log(data);
-			//TODO
-		});
-	
-	});
-	
-</script>
+<%=flash[:auth_data].uid %>
+</br>
+<%=flash[:auth_data]["extra"]["raw_info"].inspect%>
+</br>
+<%=flash[:auth_data]["credentials"].inspect%>
+</br>
+<%=flash[:auth_data].info.name%>
