--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -5,40 +5,28 @@
 			<h2>更改個人資訊</h2>
 			</div>
 		</div>
-		<% if current_user.hasE3? and not current_user.hasFb?%>
-		<div class="form-group">
-			<h4><%=label_tag '結合',"結合", :class=>"col-sm-2 control-label"%></h4>
-			<div class="col-md-2">
-				<%=link_to user_omniauth_authorize_path('facebook'), :class=>"btn  btn-primary" do%>
-					<%=fa_icon("facebook")%>acebook
-				<% end %>
-			</div>
-		</div>			
-		<div class="form-group ">
-			<div class="col-md-9 col-md-offset-2">
-				<p class="">結合後可利用fb登入，另外在賣二手書時可以選擇直接連絡您的fb帳號</p>
-			</div>
-		</div>
-		<% end %>
+    <% if current_user.hasE3? %>
 		<div class="form-group">
 			<h4><%=label_tag '分享課表',"分享課表",class:"col-sm-2 control-label"%></h4>
 			<div class="col-md-9">
 				<%=f.check_box :agree_share%> 
 			</div>
 		</div>
+    <% end %>
 		<div class="form-group">
 			<h4><%=label_tag 'Name',"Name",class:"col-sm-2 control-label"%></h4>
 			<div class="col-md-9">
 				<%=f.text_field :name, :class=>"form-control", :maxlength=>16 %>
 			</div>
 		</div>
+    <% if current_user.hasE3? %>
 		<div class="form-group "> 
 			<h4><%=label_tag 'Email',"Email",class:"col-sm-2 control-label" %></h4>
 			<div class="col-md-9">
 				<%=email_field_tag "user[email]",current_user.email.include?("please.change.me") ? "" : current_user.email, :class=>"form-control", :required=>true, :maxlength=>32 %>
 			</div>
 		</div>
-
+    <% end %>
 		<div class="form-group">
 			<h4><%=label_tag '系級',"系級",class:"col-sm-2 control-label" %></h4>
 			<div class="col-md-10">
@@ -71,11 +59,6 @@
 <script>
   $(document).ready(function(){
     
-    <% if params[:error]=="email" and not current_user.hasFb? %>
-    if(confirm("您的Email與Facebook的Email可能重複囉! 是否將此帳號與facebook做連結呢?")){
-    	document.location.href= "<%=user_omniauth_authorize_path('facebook')%>";
-    }
-    <% end %>
     <% if current_user.try(:department).try(:degree) %>
       change_degree(<%=current_user.degree%>);
     <% else %>
