fix events' head meta

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,10 @@
-<%= stylesheet_link_tag "events_show", media: "all", "data-turbolinks-track" => true %>
-
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= stylesheet_link_tag "events_show", media: "all", "data-turbolinks-track" => true %>
+</head>
+<body>
 <div id="content-container" class="">
 
 	<!-- Main Contents -->
@@ -103,7 +108,7 @@
 	</div>
 	<!-- Nav Menu End-->
 </div>
-
+</body>
 <!-- js functions -->
 <script>
 	$(document).ready(function(){
