fix course content text js bug

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -717,7 +717,8 @@
       }
       return teacherScore[1]==0 ? 0 : ((teacherScore[0]*1.0)/teacherScore[1]).toFixed(2) ;
     };
-    //
+    
+  // get the top avg score and teacher from related courses 
     var getTopScore = function(data){     
       var avgScores = [] ;
       for(var i=0, tmp; tmp=data[i]; ++i){
@@ -725,29 +726,22 @@
         avgScores.push({avg: teacherScore, teacher: tmp["name"]});
       }
       if(avgScores.length==0)
-        return 0 ;
+        return {avg: "N/A", teacher: "N/A"} ;
       else  
         return _.max(avgScores, function(ele){ return ele.avg; });
     }
-    
-    var getSpecifiedAvgScore = function(data, teacher_name){
+  // get the avg score of current course  
+    var getSpecifiedAvgScore = function(data, teacher_name){      
       for(var i=0, tmp1; tmp1=data[i]; ++i){
         if(tmp1["name"]==teacher_name){         
-           return  _getAverage(tmp1);                    
+           return _getAverage(tmp1);                    
         }
       }
-      return 0 ;
+      // only i==0 will go here
+      return "N/A" ;
     };
     
 		$.getJSON("/course_content/get_course_info.json?cd_id=<%=@data[:course_detail_id]%>", function (json_data) {		
-		  
-      // get the top avg score and teacher from related courses 
-      console.log(getTopScore(json_data["chart"]["score_data"]));
-			
-      
-      // get the avg score of current course
-      console.log(getSpecifiedAvgScore(json_data["chart"]["score_data"], json_data["teacher_name"]));
-			
 			var avg1 = getTopScore(json_data["chart"]["score_data"]);
 		  var avg2 = (getSpecifiedAvgScore(json_data["chart"]["score_data"], json_data["teacher_name"]));
 			
