--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,7 @@
 <%= stylesheet_link_tag "events_show", media: "all", "data-turbolinks-track" => true %>
-
+<%@event.attendees.each do |user|%>
+	<%=user.email%>
+<% end %>
 <div id="content-container" class="">
 
 	<!-- Main Contents -->
