--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -6,7 +6,7 @@
 			if(res)
 				return ;
 		}else if(addordel=="delete"){
-			$this_but.parent().parent().remove();
+			$this_but.parent().parent().parent().remove();
 		}	
 		save_course(cd_id,addordel,from);		
 	}
