--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -10,7 +10,10 @@
 <br>
 <div id="dept-stat-chart" class="container hidden" style="min-width;"></div>
 </br>
-
+<hr>
+<div>
+asdasdsadasd
+</div >
 <div class="row">
 <div class="col-md-4">
 	<div class="input-group">
@@ -33,6 +36,7 @@
 			<th class="col-md-1">年級</th>			
 			<th class="col-md-1">學分數</th>
 			<th class="text-center col-md-2">身份</th>
+      <th class="text-center col-md-2">asdasd</th>
 		</tr>
 	</thead>
 	<tbody id="body">
