--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -8,9 +8,10 @@
 <%= javascript_include_tag "courses/content", "data-turbolinks-track" => false %>
 
 </br>
-
+<div id="dept-stat-chart" class="container hidden" style="min-width;"></div>
+</br>
 <div class="row">
-<div class="col-md-4">
+<div class="col-md-offset-3 col-md-4">
 	<div class="input-group">
 		<%=text_field_tag :search, params[:search], :class=>"form-control", :placeholder=>"搜尋使用者"%>
 		<span class="input-group-btn">     
@@ -20,9 +21,6 @@
 </div>
 <button class="btn btn-success col-md-1" onclick="showDeptChart();">系級統計</button>
 </div>
-
-</br>
-<div id="dept-stat-chart" class="container hidden" style="min-width;"></div>
 </br>
 
 <table class="table" id="dataTables-paginate">
