--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 						<% if current_user.isAdmin? %>
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/bulletin" rel="nofollow" style="color:white;" data-no-turbolink>公佈欄<span class="badge pull-right"></span></a></li>
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/users" rel="nofollow" style="color:white;" data-no-turbolink>使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
-							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/user_statistics" rel="nofollow" data-no-turbolink style="color:white;">統計資料</a></li>
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/statistics" rel="nofollow" data-no-turbolink style="color:white;">統計資料</a></li>
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/departments" rel="nofollow" style="color:white;">系所管理<span class="badge pull-right"><%=Department.all.count%></span></a></li>
 					
 						<% end %>							
