--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,17 @@
 <%= stylesheet_link_tag "events_show", media: "all", "data-turbolinks-track" => true %>
+
+<!-- facebook og tags-->
+<% content_for :fb_head do %>
+	<meta property="og:title" content=<%=@event.title%> />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content=<%=@event.url%> />
+	<meta property="og:image" content=<%=@event.cover.url%> />
+	<meta property="og:description" content="NCTU+ 活動吧" />
+	<!--meta property="og:image:type" content="image/jpg" /-->
+	<!--meta property="og:image:width" content="190" /-->
+	<!--meta property="og:image:height" content="190" /-->
+<% end %>
+
 <div id="content-container" class="">
 	<!-- Main Contents -->
 	<div class="main-column-wrapper row">
