--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,34 +23,30 @@
 	<link rel="apple-touch-icon" sizes="120x120" href="<%=asset_path("touch-icon/iphone-retina.png")%>" />
 	<link rel="apple-touch-icon" sizes="152x152" href="<%=asset_path("touch-icon/ipad-retina.png")%>" />
 	
-	<meta property="fb:app_id" content="<%=Facebook::APP_ID%>" />
-	<% if content_for? :fb_head %>
-    <%= yield :fb_head %>
-	<% elsif @fb_share_meta %>
-	  <meta property="og:title" content="NCTU+分享課表" ></meta>
-    <meta property="og:description" content="<%=@user.name%> <%=@user.department.ch_name%> <%=@semester.name%>" ></meta>
-    <meta property="og:url" content="<%=root_url%>shares/<%=params[:id]%>" ></meta>
-    <meta property="og:image" content="<%=root_url%>course_table_shares/<%=@file_name%>"/>
-  <% else %>
+  
+	<meta property="fb:app_id" content="<%=Facebook::APP_ID%>" /> 
+	<% if content_for? :cus_fb_head %>
+    <%= yield :cus_fb_head %>  
+    <!-- custon fb header -->
+  <% else %> 
 		<meta property="og:url"           content="<%=root_url%>" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:title"         content="NCTU+" />
     <meta property="og:description" content="NCTU+ 交大智慧校園系統">
-
+    <!-- default fb header -->
 	<% end %>
 
-	<script>
-	<% if Rails.env.production? %>
+  <script>
+    <% if Rails.env.production? %>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-54567036-1', 'auto');
-  ga('send', 'pageview');
-<% end %>
-</script>
+    ga('create', 'UA-54567036-1', 'auto');
+    ga('send', 'pageview');
+    <% end %>
+  </script>
 
 </head>
 
