--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,7 @@
 	<meta property="og:description" 
 			content="時間: <%=@event.begin_time%> ~ <%=@event.end_time%> |
 								地點: <%=@event.location%> |
-							 <%=@event.content.html_safe%>" />
+							 主辦單位: <%=@event.organization%> | --NCTU+ 活動吧--" />
 	<!--meta property="og:image:width" content="800" /-->
 	<!--meta property="og:image:height" content="400" /-->
 	<!--meta property="og:image:type" content="image/jpg" /-->
